Filtros de blanco y negro implementados

--- a/app/src/main/res/layout/fragment_black_white_opcions_filter.xml
+++ b/app/src/main/res/layout/fragment_black_white_opcions_filter.xml
@@ -30,7 +30,7 @@
             android:background="#399464"
             android:textAllCaps="false"
             android:clickable="true"
-            android:onClick="averagingFilter"
+            android:onClick="desaturationFilter"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
@@ -43,7 +43,7 @@
             android:background="#399464"
             android:textAllCaps="false"
             android:clickable="true"
-            android:onClick="averagingFilter"
+            android:onClick="maxDecomposition"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
@@ -58,7 +58,7 @@
             android:background="#399464"
             android:textAllCaps="false"
             android:clickable="true"
-            android:onClick="averagingFilter"
+            android:onClick="minDecomposition"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
