--- a/app/src/main/res/layout/fragment_black_white_opcions_filter.xml
+++ b/app/src/main/res/layout/fragment_black_white_opcions_filter.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.instaa.insta_a.view.BlackWhiteOpcionsFilter">
+    tools:context="com.instaa.insta_a.view.BlackWhiteOptionsFilter">
 
     <LinearLayout
         android:layout_width="wrap_content"
