--- a/app/src/main/res/layout/fragment_principal_page.xml
+++ b/app/src/main/res/layout/fragment_principal_page.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,84 +6,99 @@
     tools:context="com.instaa.insta_a.view.PrincipalPage">
 
     <ScrollView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:fillViewport="true"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/logo" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Insta A"
-                android:textColor="#399464"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:paddingBottom="40dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
-                <LinearLayout
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_above="@+id/list1"
+                android:paddingBottom="30dp"
+                android:paddingTop="30dp">
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <ImageButton
-                        android:id="@+id/imageButton1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/cameradiaphragm"
-                        android:background="@null"
-                        android:paddingRight="30dp"
-                        android:paddingLeft="30dp"
-                        android:onClick="takePicture"
-                        android:clickable="true"
-                        android:paddingTop="15dp"
-                        android:paddingBottom="15dp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tomar foto"
-                        android:layout_gravity="center"
-                        android:textColor="#399464"
-                        android:textStyle="bold"
-                        android:clickable="true"
-                        android:onClick="takePicture"/>
-                </LinearLayout>
-                <LinearLayout
+                    android:src="@drawable/logo" />
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <ImageButton
-                        android:id="@+id/imageButton2"
+                    android:text="Insta A"
+                    android:textColor="#399464"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:paddingBottom="40dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/gallery"
-                        android:background="@null"
-                        android:paddingLeft="30dp"
-                        android:paddingRight="30dp"
-                        android:clickable="true"
-                        android:onClick="openGallery"/>
-                    <TextView
+                        android:orientation="vertical">
+                        <ImageButton
+                            android:id="@+id/imageButton1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/cameradiaphragm"
+                            android:background="@null"
+                            android:paddingRight="30dp"
+                            android:paddingLeft="30dp"
+                            android:onClick="takePicture"
+                            android:clickable="true"
+                            android:paddingTop="15dp"
+                            android:paddingBottom="15dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Tomar foto"
+                            android:layout_gravity="center"
+                            android:textColor="#399464"
+                            android:textStyle="bold"
+                            android:clickable="true"
+                            android:onClick="takePicture"/>
+                    </LinearLayout>
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Galería"
-                        android:textColor="#399464"
-                        android:textStyle="bold"
-                        android:clickable="true"
-                        android:onClick="openGallery"/>
+                        android:orientation="vertical">
+                        <ImageButton
+                            android:id="@+id/imageButton2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/gallery"
+                            android:background="@null"
+                            android:paddingLeft="30dp"
+                            android:paddingRight="30dp"
+                            android:clickable="true"
+                            android:onClick="openGallery"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Galería"
+                            android:textColor="#399464"
+                            android:textStyle="bold"
+                            android:clickable="true"
+                            android:onClick="openGallery"/>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+            <ListView
+                android:id="@+id/list1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ListView>
         </LinearLayout>
     </ScrollView>
-</FrameLayout>
+</RelativeLayout>
