--- a/app/src/main/res/layout/image_container.xml
+++ b/app/src/main/res/layout/image_container.xml
@@ -9,4 +9,11 @@
         android:paddingTop="10dp"
         android:layout_gravity="center"
         android:paddingBottom="10dp"/>
+    <TextView
+        android:id="@+id/textImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center"
+        android:textStyle="bold"/>
 </LinearLayout>
